{{$NEXT}}

0.11     2014-08-02

- Added GitHub::Update plugin.


0.10     2014-08-02

- Added a number of additional plugins to help me make better dists.

- Moved this distro to GitHub.


0.09     2014-05-04

- Use Test::NoTabs plugin instead of NoTabsTests.


0.08     2014-04-05

- Internals fixes to work with Config::MVP that is stricter about handling
  plugin options passed by this bundle. Reported by Karen Etheridge. RT
  #94466.

- Make sure all the plugins this bundle uses end up declared as
  prereqs. Reported by Dagfinn Ilmari Mannsåker. RT #94363.


0.07     2014-01-25

- Added the PruneFiles plugin to prune the README file that gets copied from
  the build.

- Allow the README to be dirty for Git::Commit.


0.06     2014-01-25

- Added "do_munging => 0" to the options for the Authority plugin so it
  doesn't add a useless $AUTHORITY var to packages.


0.05     2013-12-13

- Added ContributorsFromGit and Meta::Contributors plugins.


0.04     2013-12-13

- Added more plugins and support for removing plugins.


0.03     2013-06-07

- Allow multiple prereqs_skip and stopwords properties


0.02     2013-05-13

- Allow prereqs_skip option to be passed to AutoPrereqs


0.01     2013-04-21

- First release upon an unsuspecting world.