@@ -1,5 +1,10 @@
 {{$NEXT}}
 
+- Added Test::Pod::Coverage::Configurable plugin.
+
+- Removed the remove option in favor of -remove
+
+
 0.11     2014-08-02
 
 - Added GitHub::Update plugin.
